--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,5 @@
 <ion-view hide-nav-bar="true">
-    <ion-header-bar class="bar-positive bar bar-header disable-user-behavior" align-title="center">
-        <custom-boxdate></custom-boxdate>
-        <custom-multilinetitle></custom-multilinetitle>
-        <custom-settings></custom-settings>
-    </ion-header-bar>
+    <ux-header></ux-header>
     <ion-content class="padding">
         <div id="homePortrait">
             <div class="row">
