--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,11 +1,5 @@
 <ion-view hide-nav-bar="true">
-    <ion-header-bar class="bar-positive bar bar-header disable-user-behavior" align-title="center">
-        <custom-boxdate></custom-boxdate>
-        <custom-multilinetitle></custom-multilinetitle>
-        <!--
-        <custom-settings></custom-settings>
-        -->
-    </ion-header-bar>
+    <ux-header></ux-header>
     <ion-content class="padding content-bgImage">
         <!--
         <img style="max-width: 100%" src="img/staticmap.png"  />
@@ -36,17 +30,5 @@
             </div>
         </div>
     </ion-content>
-    <ion-footer-bar align-title="left" class="bar-assertive">
-        <div class="full-image text-center">
-            <h1 class="">431 Sage Street &bull; Temple, GA 30179</h1>
-            <!--
-           <a class="button button-light icon-left ion-ios-navigate button-calm"
-                href="http://maps.google.com/maps?q='431 Sage Street, Temple, GA 30179'">&nbsp;&nbsp;431 Sage Street &bull; Temple, GA 30179</a>                        
-            -->
-        </div>
-        <!--
-        <h1 class="title">431 Sage Street &bull; Temple, GA 30179</h1>
-        -->
-    </ion-footer-bar>
-    
+    <ux-footer></ux-footer>
 </ion-view>
