--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,16 @@
 <ion-view hide-nav-bar="true">
     <ux-header></ux-header>
-    <ion-content class="padding">
+    <ion-content class="padding centered">
         <div id="homePortrait">
-            <div class="row">
-                <div class="col">
-                    <img style="max-width: 100%" src="img/background.jpg"/>    
+                <div class="row">
+                    <div class="col text-center">
+                        <img style="max-width: 100%" src="img/background.jpg"/>    
+                    </div>
                 </div>
-            </div>
-            <div class="row" ng-repeat="day in days">
-                <div class="col">{{day.name}}</div>
-                <div class="col text-right">{{day.hours}}</div>
-            </div>
+                <div class="row" ng-repeat="day in days">
+                    <div class="col text-left homeDOW">{{day.name}}</div>
+                    <div class="col text-right homeHours">{{day.hours}}</div>
+                </div>
         </div>
         <div id="homeLandscape">
             <div class="row">
@@ -19,8 +19,8 @@
                 </div>
                 <div class="col col-center">
                     <div class="row" ng-repeat="day in days">
-                        <div class="col">{{day.name}}</div>
-                        <div class="col text-right">{{day.hours}}</div>
+                        <div class="col text-left homeDOW">{{day.name}}</div>
+                        <div class="col text-right homeHours">{{day.hours}}</div>
                     </div>
                 </div>
             </div>
