Added PushWoosh Notification

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,52 +1,26 @@
 <ion-view hide-nav-bar="true">
     <ux-header></ux-header>
     <ion-content class="padding about-bgImage"> <!-- style="background: #474747;"> -->
-                    <!--
-        <div class="text-center">
-            <div class="inline" style="border: 10px solid black">
-                <div class="" style="border: 10px solid yellow">
-                    <img src="img/lori_hudson_blank.png" style="max-width: 100%"></img>
-                </div>
-                <div class="" 
-                    style="float:left;top:0;left:0;border: 10px solid blue">
-                    -->
-                    <tmc-Phone-Long phone="7705620632"></tmc-Phone-Long>
-                    <div class="full-image row-center">
-                        <!-- style="border: 10px solid green"> -->
-                        <div class="row">
-                        <div class="col text-center">
-                        <!--
-                        <a class="button button-outline 
-                                  icon-left ion-ios-telephone button-balanced portrait"
-                           style="left: -72px"
-                            href="tel://770-562-9007">770 562-9007</a>                        
-                        <a class="button button-outline 
-                                  icon-left ion-ios-telephone button-balanced landscape"
-                            href="tel://770-562-9007">770 562-9007</a>                        
-                        </div>
-                        <div class="col landscape">&nbsp;</div>
-                        </div>
-                        -->
-                        <tmc-aboutinfo src="img/lori_hudson_blank.png"
+        <tmc-Phone-Long phone="7705620632"></tmc-Phone-Long>
+        <div class="full-image row-center">
+            <div class="row">
+                <div class="col text-center">
+                    <tmc-aboutinfo src="img/lori_hudson_blank.png"
 items='
 [
-    {"col1":"<h3>Walkings <br class=\"portrait\"/>Welcome</h3>",
-     "col2":"<tmc-Yos></tmc-Yos>"},
-    {"col1":"<h3>Short Wait Times</h3>"},
-    {"col1":"<h3>Whole Family Care</h3>"},
-    {"col1":"<h3>Wellness / Sick Visits</h3>"},
-    {"col1":"<h3>Sports Physicals</h3>"},
-    {"col1":"<h3><br/>Lori Hudson, FNP</h3>"}
+    {"col1":"Walkings <br class=\"portrait\"/>Welcome"},
+    {"col1":"Short Wait Times"},
+    {"col1":"Whole Family Care"},
+    {"col1":"Wellness / Sick Visits"},
+    {"col1":"Sports Physicals"},
+    {"col1":"Lori Hudson, FNP"}
 ]
 ' >
-                            <h1>tmc-aboutinfo</h1>
-                        </tmc-aboutinfo>
-                    </div>
-                    <tmc-Yos style="position:absolute; float:right; top: 0; right: 0;"></tmc-Yos>
-        <!--
+                        <h1>tmc-aboutinfo goes here</h1>
+                    </tmc-aboutinfo>
                 </div>
             </div>
-        </div>
-        -->
+        </div>    
+        <tmc-Yos style="position:fixed; float:right; top: 0; right: 0;"></tmc-Yos>
     </ion-content>
-</ion-view>
+</ion-view>s
