--- a/templates/boxDate.html
+++ b/templates/boxDate.html
@@ -17,7 +17,7 @@
       left:15px;
       line-height:45px;
       position:absolute;
-      top:0;
+      top: 2px;
     }
     .box-date .year {
       -webkit-transform: rotate(360deg);
