--- a/templates/settingsButton.html
+++ b/templates/settingsButton.html
@@ -1,6 +1,7 @@
-<div class="title"></div>
+<div id="divBtnSettingsTitle"class="title" style="z-index:1"></div>
 <div id="btnSettings" class="buttons buttons-right"
-     ng-click="btnSettings_click();">
+     ng-click="btnSettings_click();"
+     ng-show="{{ homeSettings }}">
     <span class="right-buttons">
         <button class="button button-icon button-clear ion-gear-a">
         </button>
