--- a/templates/yos.html
+++ b/templates/yos.html
@@ -19,6 +19,11 @@
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3), inset 0px 2px 5px rgba(0, 0, 0, 0.3);
     display: inline-block;
 }
+
+.platform-android.platform-cordova .yos-btn {
+    top: 74px;
+}
+
 .yos-btn-o {
     width: 190px;
     height: 190px;
