--- a/templates/boxDate.html
+++ b/templates/boxDate.html
@@ -6,19 +6,27 @@
       padding:45px 5px 0;
       position:relative;
     }
+    
     .platform-android.platform-cordova:not(.fullscreen) .box-date {
-        top: -10px;
+        top: -5px;
     }
+
+    .platform-android.platform-cordova:not(.fullscreen) .box-date .day{
+        top: 10px;
+    }
+    
     .platform-ios.platform-cordova:not(.fullscreen) .box-date {
         top: -30px;
     }
+    
     .box-date .day {
       font-size:40px;
       left:15px;
       line-height:40px;
       position:absolute;
-      top: 2px;
+      top: 5px;
     }
+    
     .box-date .year {
       -webkit-transform: rotate(360deg);
       -moz-transform: rotate(360deg);
@@ -30,15 +38,11 @@
       right:15px;
       top:5px;
     }
+    
     .box-date .month {
-      /* left:-15px; */
       text-align: right;
       font-size:12px;
       line-height: 12px;
-    /*
-      border-style: solid;
-      border-width: 1px;
-    */
       display: inline-block;
       max-width: 63px;
       text-transform:uppercase;
@@ -47,5 +51,5 @@
 <div class="box-date">
     <span class="day">{{ boxDate.DD }}</span> 
     <span class="year">{{ boxDate.YYYY }}</span>
-    <span class="month" style="width: 100px">{{ boxDate.Month }}</span> 
+    <span class="month">{{ boxDate.Month }}</span> 
 </div>
